# voice-speech-therapy-professionals-agent-skill

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT-TRACKING.md  Dockerfile  GLOSSARY-vi.md  LICENSE  Makefile  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SKILL.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
assets/: __init__.py  diagrams.md
config/: __init__.py  schemas.py  settings.py
references/: __init__.py  domain-knowledge.md  prompt-templates.md
scripts/: __init__.py  hooks.py  tools.py
skills/: _shared-conventions.md  main.md  sub-advisor.md  sub-core-analysis.md  sub-evidence-collector.md  sub-gather-requirements.md  sub-knowledge-updater.md
tests/: TEST_RESULTS.md  test-scenarios.md  test_domain.py
tools/: _config.py  knowledge_updater.py  run_test_scenarios.py  test_knowledge_updater.py
