[project]
name = "voice-speech-therapy-professionals"
version = "2.0.0"
description = "Voice & Speech Therapy & Articulation Coach for Voice Professionals (MC, Podcaster, Teacher) — Vocal Health & Speech-Language Pathology for Voice Professionals evidence-backed analysis harness."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "voice-speech-therapy-professionals contributors" },
]
requires-python = ">=3.11"
keywords = [
    "voice-therapy",
    "speech-pathology",
    "vocal-health",
    "articulation",
    "claude-skill",
    "speech-language-pathology",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "portalocker>=2.8.0",
    "python-dateutil>=2.8.2",
    "feedparser>=6.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[project.urls]
Repository = "https://github.com/your-org/voice-speech-therapy-professionals"
Issues = "https://github.com/your-org/voice-speech-therapy-professionals/issues"

[project.scripts]
vstp-update = "tools.knowledge_updater:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",
    "FBT001",
    "FBT002",
    "D100",
    "D104",
    "S311",
    "TRY003",
    "EM101",
    "EM102",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "ANN101",
    "ANN102",
    "ANN401",
    "COM812",
    "ISC001",
    "PT001",
    "ARG001",
    "ARG002",
    "DTZ005",
    "DTZ011",
    "SLF001",
    "A002",
    "C901",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportImplicitRelativeImport = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tools", "tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "property: marks property-based tests",
]

[tool.coverage.run]
source = ["tools"]
omit = ["tools/test_*.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 85
